# SI-lista-1

./: .gitignore  Cargo.toml  prototype.ipynb  prototype.py  raport.md  uwagi.md
src/: main.rs
