[package]
name = "lista_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3"
graphlib = "0.6"
chrono = "0.4"
serde = {version = "1", features = ["derive"]}
rayon = "1.9.0"
petgraph = "0.6"
rand = "0.7.3"
atomic-option = "0.1"

[profile.release]
lto = "fat"
codegen-units = 1
debug = true

